# rayray

./: .gitignore  CMakeLists.txt  README.md
src/: Timer.hpp  main.cpp  math.hpp  objects.hpp  ppm.cpp  renderer.cpp  renderer.hpp
